<resources>
    <string name="app_name">Weather UI</string>
    <string name="Weather1">ПОГОДА</string>
    <string name="City1">САНКТ-ПЕТЕРБУРГ</string>
    <string name="Country1">РОССИЯ</string>
    <string name="Time">СРЕДА 9:11</string>
    <string name="Degree">18°С</string>
    <string name="Sun">СОЛНЕЧНО</string>
    <string name="Humidity1">ВЛАЖНОСТЬ</string>
    <string name="Humidity2">83%</string>
    <string name="Windy1">ВЕТРЕННО</string>
    <string name="Windy2">3,1 м/с, СЗ</string>
    <string name="Feel1">ОЩУЩАЕТСЯ</string>
    <string name="Feel2">18°С</string>
    <string name="Cloudy1">ОБЛАЧНО</string>
    <string name="Cloudy2">10 am</string>
    <string name="Rain1">ДОЖДЬ</string>
    <string name="Rain2">11 am</string>
    <string name="Windy2_2">12 am</string>
    <string name="Windy2_1">ВЕТРЕННО</string>
    <string name="Cloudy3">ОБЛАЧНО</string>
    <string name="Cloudy2_1">1 pm</string>
    <string name="Rain3">ДОЖДЬ</string>
    <string name="Rain4">2 pm</string>
    <string name="Weather">ПОГОДА</string>
    <string name="City">САНКТ-ПЕТЕРБУРГ</string>
    <string name="Country">РОССИЯ</string>
    <string name="Time2">СРЕДА 22:43</string>
    <string name="Degree2">9°С</string>
    <string name="Sun2">ОБЛАЧНО</string>
    <string name="Humidity">ВЛАЖНОСТЬ</string>
    <string name="Humidity3">76%</string>
    <string name="Windy">ВЕТРЕННО</string>
    <string name="Windy3">2,1 м/с, ЮВ</string>
    <string name="Feel">ОЩУЩАЕТСЯ</string>
    <string name="Feel3">8°С</string>
    <string name="Rain5">ДОЖДЬ</string>
    <string name="Rain6">11 pm</string>
    <string name="Wind">ВЕТЕР</string>
    <string name="Rain7">12 pm</string>
    <string name="Cloudy">ОБЛАЧНО</string>
    <string name="Cloudy4">2 am</string>
    <string name="Rain8">ДОЖДЬ</string>
    <string name="Rain9">3 am</string>
    <string name="Rain10">1 am</string>
    <string name="Rain11">4 am</string>
    <string name="White_theme">Светлая тема</string>
    <string name="Black_theme">Тёмная тема</string>
</resources>