<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Weather1"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text1"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/city"
        android:layout_below="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/City1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text1"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/country"
        android:layout_below="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Country1"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text1"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/time"
        android:layout_below="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text1"
        android:layout_marginTop="20dp"
        />
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/time"
        android:layout_marginTop="10dp"
        android:src="@drawable/sun"
        android:padding="10dp"
        android:contentDescription="TODO" />
    <TextView
        android:id="@+id/deg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Degree"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text1"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sun"
        android:layout_below="@+id/deg"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:id="@+id/ext"
        android:layout_margin="10dp"
        android:background="@color/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forecast"
        android:weightSum="3"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Humidity"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/image1_1"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="35dp"
                android:src="@drawable/humidity"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Humidity2"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Windy"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/image1_2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/wind"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Windy2"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Feel"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/image1_3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/hot"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Feel2"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="@color/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ext"
        android:weightSum="3"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Cloudy"
                android:textColor="@color/text1"
                android:textSize="12sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/image1_4"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:src="@drawable/storm"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cloudy2"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rain1"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/image1_5"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:src="@drawable/rain"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rain2"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Windy2_1"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/image1_6"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:src="@drawable/wind"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Windy2_2"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cloudy"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/image1_7"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:src="@drawable/storm"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cloudy2_1"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rain3"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/image1_8"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:src="@drawable/rain"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rain4"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/text1"
                android:layout_gravity="center"/>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_margin="10dp"
        android:background="@color/text2"
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Black_theme"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/text1"
        android:layout_gravity="center"
        android:padding="5dp"/>


</RelativeLayout>